// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerImage renders 1`] = `
<bannerImage__StyledWrapper
  allowContentUnderflow={false}
  color=""
  imageFullWidth={false}
  imageSrc=""
  large={false}
  role="banner"
>
  <bannerImage__StyledContainer
    homepage={false}
    imageFullWidth={false}
    imageSrc=""
    mx="auto"
  >
    <bannerImage__StyledRow>
      <Column
        width={1}
      >
        <StyledBannerTitle />
        <StyledBannerSubtitle />
      </Column>
    </bannerImage__StyledRow>
  </bannerImage__StyledContainer>
</bannerImage__StyledWrapper>
`;

exports[`BannerImage renders the subtitleText from props to BannerSubtitle 1`] = `
<bannerImage__StyledWrapper
  allowContentUnderflow={false}
  color=""
  imageFullWidth={false}
  imageSrc=""
  large={false}
  role="banner"
>
  <bannerImage__StyledContainer
    homepage={false}
    imageFullWidth={false}
    imageSrc=""
    mx="auto"
  >
    <bannerImage__StyledRow>
      <Column
        width={1}
      >
        <StyledBannerTitle />
        <StyledBannerSubtitle>
          And here is a test subtitle!
        </StyledBannerSubtitle>
      </Column>
    </bannerImage__StyledRow>
  </bannerImage__StyledContainer>
</bannerImage__StyledWrapper>
`;

exports[`BannerImage renders the titleText from props to BannerTitle  1`] = `
<bannerImage__StyledWrapper
  allowContentUnderflow={false}
  color=""
  imageFullWidth={false}
  imageSrc=""
  large={false}
  role="banner"
>
  <bannerImage__StyledContainer
    homepage={false}
    imageFullWidth={false}
    imageSrc=""
    mx="auto"
  >
    <bannerImage__StyledRow>
      <Column
        width={1}
      >
        <StyledBannerTitle>
          Here is a test title!
        </StyledBannerTitle>
        <StyledBannerSubtitle />
      </Column>
    </bannerImage__StyledRow>
  </bannerImage__StyledContainer>
</bannerImage__StyledWrapper>
`;
